fix: layout/navbar strcture for background & sub-menu z-index

--- a/Jin_t6/scss/layout/_navbar.scss
+++ b/Jin_t6/scss/layout/_navbar.scss
@@ -186,6 +186,7 @@
   }
   .sub-menu {
     position: absolute;
+    z-index: 99;
     li {
       float: none;
       display: block;
